# finance

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  common.h  deploy  launch  main.cpp  mainwindow.cpp  mainwindow.h  migrations.cpp  migrations.h  sql.qrc
sql/: 00.sql  01.sql
